--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jUu-zy-qom">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -42,7 +42,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="0OO-Da-ExL" id="CAB-Q4-g7q"/>
                                     <outlet property="userImageView" destination="cej-kE-N1c" id="6j0-fQ-cVc"/>
-                                    <segue destination="aJr-na-szk" kind="show" id="Xeg-jd-Uht"/>
+                                    <segue destination="aJr-na-szk" kind="show" identifier="ShowDetailView" id="Xeg-jd-Uht"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
