--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -26,18 +26,27 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cej-kE-N1c">
-                                            <rect key="frame" x="16" y="4" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cej-kE-N1c">
+                                            <rect key="frame" x="16" y="5" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="95L-Uz-38j"/>
+                                                <constraint firstAttribute="height" constant="50" id="ISM-S0-9vw"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0OO-Da-ExL">
-                                            <rect key="frame" x="74" y="19" width="285" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0OO-Da-ExL">
+                                            <rect key="frame" x="74" y="19.5" width="42" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0OO-Da-ExL" secondAttribute="trailing" constant="20" symbolic="YES" id="EmM-2I-hxh"/>
+                                        <constraint firstItem="cej-kE-N1c" firstAttribute="leading" secondItem="vD4-qp-9d0" secondAttribute="leadingMargin" id="RIi-pL-oPO"/>
+                                        <constraint firstItem="cej-kE-N1c" firstAttribute="centerY" secondItem="0OO-Da-ExL" secondAttribute="centerY" id="Zo8-BC-IMY"/>
+                                        <constraint firstItem="0OO-Da-ExL" firstAttribute="leading" secondItem="cej-kE-N1c" secondAttribute="trailing" constant="8" symbolic="YES" id="mqk-Qa-b8I"/>
+                                        <constraint firstItem="cej-kE-N1c" firstAttribute="centerY" secondItem="vD4-qp-9d0" secondAttribute="centerY" id="qyF-07-ySr"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="nameLabel" destination="0OO-Da-ExL" id="CAB-Q4-g7q"/>
