--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -78,29 +78,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="kYl-Gs-BaD">
-                                <rect key="frame" x="30" y="94" width="315" height="418.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="kYl-Gs-BaD">
+                                <rect key="frame" x="30" y="94" width="315" height="403.5"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OTv-fe-r8o">
-                                        <rect key="frame" x="0.0" y="0.0" width="315" height="315"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OTv-fe-r8o">
+                                        <rect key="frame" x="0.0" y="0.0" width="315" height="300"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="OTv-fe-r8o" secondAttribute="height" multiplier="1:1" id="nxg-Zj-lYR"/>
+                                            <constraint firstAttribute="height" constant="300" id="Gda-JY-6r7"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mVS-dl-vg9">
-                                        <rect key="frame" x="0.0" y="325" width="69" height="32.5"/>
+                                        <rect key="frame" x="0.0" y="310" width="315" height="32.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1bD-7K-Hvy">
-                                        <rect key="frame" x="0.0" y="367.5" width="115" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="352.5" width="315" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dHK-UV-KHk">
-                                        <rect key="frame" x="0.0" y="398" width="41" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="383" width="315" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -111,6 +111,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="kYl-Gs-BaD" secondAttribute="trailing" constant="30" id="Mgv-rZ-eCh"/>
+                            <constraint firstItem="kYl-Gs-BaD" firstAttribute="centerX" secondItem="pq4-Ai-F09" secondAttribute="centerX" id="Rub-F3-7xj"/>
                             <constraint firstItem="kYl-Gs-BaD" firstAttribute="leading" secondItem="sdH-tg-7XB" secondAttribute="leading" constant="30" id="e0B-dY-vuI"/>
                             <constraint firstItem="kYl-Gs-BaD" firstAttribute="top" secondItem="sdH-tg-7XB" secondAttribute="top" constant="30" id="hkp-Ra-BH7"/>
                         </constraints>
